resolved z-index

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,7 @@ body {
     left: 0px;
     width: 100vw;
     text-align: center;
+    z-index: 50;
 }
 
 main {
@@ -119,17 +120,17 @@ a {
     text-decoration: none;
 }
 
-.card:hover {
-}
+/*.card:hover {*/
+/*}*/
 
-a:visited {
-color: inherit;
+/*a:visited {*/
+/*color: inherit;*/
 
-}
+/*}*/
 
-.card:active {
-    transform: scale(.97);
-}
+/*.card:active {*/
+    /*transform: scale(.97);*/
+/*}*/
 
 
 
